--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(yadro)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(yadro src/main.cpp headers/tape.h headers/tape_impl.h src/tape_utils.cpp headers/tape_utils.h)
+add_executable(yadro src/main.cpp headers/tape.h headers/tape_impl.h src/tape_utils.cpp headers/tape_utils.h headers/tape_exception.h)
 add_subdirectory(tests)
